# aws-request-signer

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  README.md  demo.py  mypy.ini  pyproject.toml
aws_request_signer/: __init__.py  requests.py
