[tool.poetry]
name = "aws-request-signer"
version = "1.0.0"
description = "A helper library that implements AWS Signature V4."
authors = ["Ingmar Steen <iksteen@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"
requests = {version = "^2.21",optional = true}
requests_toolbelt = {version = "^0.8.0",optional = true}

[tool.poetry.dev-dependencies]
pre-commit = "^1.14"

[tool.poetry.extras]
requests = ["requests"]
demo = ["requests", "requests_toolbelt"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
