[tool.poetry]
name = "aws-request-signer"
version = "1.1.1"
description = "A python library to sign AWS requests using AWS Signature V4."
license = "MIT"
authors = ["Ingmar Steen <iksteen@gmail.com>"]
readme = "README.md"
homepage = "https://www.github.com/iksteen/aws-request-signer"
repository = "https://www.github.com/iksteen/aws-request-signer.git"

[tool.poetry.dependencies]
python = "^3.6.1"
requests = {version = "^2.21",optional = true}
requests_toolbelt = {version = "^0.8.0",optional = true}

[tool.poetry.dev-dependencies]
pre-commit = "^2.9.2"

[tool.poetry.extras]
requests = ["requests"]
demo = ["requests", "requests_toolbelt"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
