[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-request-signer"
version = "1.2.0"
description = "A python library to sign AWS requests using AWS Signature V4."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Ingmar Steen", email = "iksteen@gmail.com" },
]
dependencies = []

[project.optional-dependencies]
requests = [
  "requests>=2.21,<3",
]
demo = [
  "requests>=2.21,<3",
  "requests_toolbelt>=1.0.0,<2.0.0",
]
dev = [
  "pre-commit>=4.3.1,<5",
]

[project.urls]
Homepage = "https://github.com/iksteen/aws-request-signer"
Repository = "https://github.com/iksteen/aws-request-signer.git"

[tool.black]
target-version = ["py310"]
